# hh-mnist

./: .gitignore  README.md  complex.ipynb  create_composite_images.py  mnist.ipynb  models.py  pe.ipynb  profile_model.py  pyproject.toml  setup.sh  train_complex_model.py  train_model.py  utils.py  webserver.py
.ben/: compare_models.py  mnist.ipynb  model.pth  model.py  pyproject.toml  sweep.yaml  train.py  train_model.py  utils.py
anton/: README.md  requirements.txt
anton/config/: default.yaml  default_classifier.yaml  default_seq2seq.yaml  sweep.yaml  sweep_classifier.yaml
anton/notebooks/: testing.ipynb
anton/src/: config.py  data.py  inference.py  main.py  model.py  train.py  train_classifier.py  train_seq2seq.py  utils.py
anton/webapp/: data_collection.html
slides/: package.json  slides.md
sweeps/: 6mzx9tdw.csv  9wmxmvo1.csv  r3mcjgqa.csv
tiny/: main.py  pyproject.toml
